# name-profiler-api

./: .env.example  .vercelignore  README.md  app.py  profiles.db  pyproject.toml  requirements.txt  search_parser.py  utils.py
api/: __init__.py  index.py
