[project]
name = "name-profiler-api"
version = "0.1.0"
description = "Name Profiler API - Data Persistence & API Design Assessment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.8.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "python-dotenv>=1.0.0",
    "requests>=2.33.1",
    "uuid6>=2025.0.1",
]
